--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "php": "^7.3|^8.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
+        "geo-sot/laravel-env-editor": "^0.9.11",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jackiedo/dotenv-editor": "^1.2",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5"
     },
